# mate-netspeed

./: ChangeLog  MATE_NetspeedApplet.server.in.in  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  mate-doc-utils.make  mate_netspeed_applet.spec  netspeed_applet.spec
.tx/: config
data/: Makefile.am  mate-netspeed.convert  org.mate.panel.NetspeedApplet.mate-panel-applet.in.in  org.mate.panel.applet.netspeed.gschema.xml.in
help/: Makefile.am  Makefile.in
help/C/: index.docbook
icons/: Makefile.in
icons/16x16/: Makefile.in
icons/16x16/apps/: Makefile.in
icons/16x16/devices/: Makefile.in
icons/22x22/: Makefile.in
icons/22x22/apps/: Makefile.in
icons/24x24/: Makefile.in
icons/24x24/apps/: Makefile.in
icons/24x24/status/: Makefile.in
icons/32x32/: Makefile.in
icons/32x32/apps/: Makefile.in
icons/48x48/: Makefile.in
icons/48x48/apps/: Makefile.in
icons/scalable/: Makefile.in
icons/scalable/apps/: Makefile.in
po/: LINGUAS  POTFILES.in  af.po  am.po  ar.po  ast.po  be.po  bg.po  br.po  ca.po  cmn.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  es_CL.po  es_MX.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  gl.po  gnome-copyrights.txt  he.po  hi.po  hr.po  hu.po  hy.po  id.po  it.po  ja.po  jv.po  kk.po  ko.po  ky.po  lt.po  (+25 more)
src/: Makefile.am  Makefile.in  backend.c  netspeed.c
